...
                  ],
                ),
                Row(
                  children: [
                    Expanded(child: Text(loc!.beep)),
                    Semantics(
                      identifier: "ping_beep_switch",
                      child: Switch(
                        value: _beep,
                        onChanged: (bool value) {
                          setState(() {
                            _beep = value;
                          });
...
              ],
            ),
          ),
        ),
        floatingActionButton: Semantics(
          container: true,
          identifier: "ping_fab",
          child: FloatingActionButton(
            onPressed: () {
              if (ping != null) {
                _stopPing();
              } else {
                _startPing();
...
