appId: jp.co.twise.twsnmpfm
---
# (1) Create a node (miniPC)
- tapOn:
    id: "add_node_fab"
- extendedWaitUntil:
    visible:
      id: "node_name_field"
    timeout: 10000
- tapOn:
    id: "node_name_field"
- inputText: "ng_node"
- runFlow:
    when:
      platform: Android
    commands:
      - hideKeyboard
- tapOn:
    id: "node_ip_field"
- inputText: "192.168.1.99"
- runFlow:
    when:
      platform: Android
    commands:
      - hideKeyboard
- tapOn:
    id: "community_field"
- inputText: "public"
- runFlow:
    when:
      platform: Android
    commands:
      - hideKeyboard
- tapOn:
    id: "ping_switch"
- tapOn:
    id: "save_node_button"
- extendedWaitUntil:
    visible:
      id: "node_menu_button_0"
    timeout: 10000
