appId: jp.co.twise.twsnmpfm
---
- launchApp:
    clearState: true
- runFlow:
    file: subflow/setup_ok_node.yaml
- tapOn:
    id: "node_menu_button_0"
- waitForAnimationToEnd
- tapOn:
    id: "node_menu_item_ping"
- extendedWaitUntil:
    visible:
      id: "ping_fab"
    timeout: 10000
- tapOn:
    id: "ping_beep_switch"
- tapOn:
    id: "ping_fab"
